added a photo of myself :)

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
             <li> <a href="/jquery/">Contact</a> </li>
         </ul>
     </nav>
-    <div class="blah">
+    <div>
+        <img src="assets/images/me.jpg" class="picMe">
         <h1>Hey, I'm John Williamson</h1>
-        <p>I am an aspiring developer, based in Austin,TX.</p>
+        <p>I am an aspiring developer, based in Austin, TX! I just graduated from Texas State University with my BS in Computer Science. Currently looking for a Full-Time position as a Software Engineer.</p>
     </div>
     <hr>
 </body>
