fixed icons in footer

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -19,10 +19,10 @@
         <img src="assets/images/me.jpg" class="picMe">
         <h1>Hey, I'm John Williamson</h1>
         <p>I am an aspiring developer, based in Austin, TX! I just graduated from Texas State University with my BS in Computer Science. Currently looking for a Full-Time position as a Software Engineer.</p>
-    </div>
-    <hr>
+    </div><br>
+    
 </body>
-
+<hr style="border: 1;">
 <footer>
     <a href=https://www.linkedin.com/in/john-williamson-08b48412b>
     <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
