added line seperator above footer

--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 <body>
     <nav>
         <ul>
-            <li> <a href="/html/">About</a> </li>
+            <li> <a href="#">About</a> </li>
             <li> <a href="assets/resume/John Williamson Resume.pdf" target="_blank">Resume</a> </li>
-            <li> <a href="/jquery/">Contact</a> </li>
+            <li> <a href="#">Contact</a> </li>
         </ul>
     </nav>
-    <div>
+    <div class="blah">
         <img src="assets/images/me.jpg" class="picMe">
         <h1>Hey, I'm John Williamson</h1>
         <p>I am an aspiring developer, based in Austin, TX! I just graduated from Texas State University with my BS in Computer Science. Currently looking for a Full-Time position as a Software Engineer.</p>
-    </div><br>
+    </div>
     
 </body>
-<hr style="border: 1;">
-<footer>
+
+<footer class="footer">
+    <hr style="width: 90%">
     <a href=https://www.linkedin.com/in/john-williamson-08b48412b>
     <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
     <a href=https://github.com/j-williamson4>
