moved hr to top

--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@
     <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <title>John Williamson</title>
 </head>
 
 <body>
     <nav>
         <ul>
-            <li> <a href="#">About</a> </li>
-            <li> <a href="assets/resume/John Williamson Resume.pdf" target="_blank">Resume</a> </li>
-            <li> <a href="#">Contact</a> </li>
+            <li><a href="#" >About</a></li>
+            <li><a href="assets/resume/John Williamson Resume.pdf" 
+                    target="_blank">Resume</a>
+            </li>
+            <li><a href="#" >Contact</a></li>
         </ul>
     </nav>
-    <div class="blah">
-        <img src="assets/images/me.jpg" class="picMe">
-        <h1>Hey, I'm John Williamson</h1>
-        <p>I am an aspiring developer, based in Austin, TX! I just graduated from Texas State University with my BS in Computer Science. Currently looking for a Full-Time position as a Software Engineer.</p>
+    <hr>
+    <div class="info">
+       <div class="circle-portrait"><img src="assets/images/me.jpg" class="picMe"></div>
+       <h1>John Williamson </h1>
+       <h3 style="color:#6e5e57;"> Software Developer</h3>
+       <p>I am an aspiring web developer, based near Austin, TX! I just graduated from Texas State University with my BS in Computer Science. Currently looking for a Full-Time position as a Software Engineer, or as a Web Developer.</p>
     </div>
-    
+    <div class="icons">
+       <a href=https://www.linkedin.com/in/john-williamson-08b48412b>
+       <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+       <a href=https://github.com/j-williamson4>
+       <i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+    </div>
 </body>
-
-<footer class="footer">
-    <hr style="width: 90%">
-    <a href=https://www.linkedin.com/in/john-williamson-08b48412b>
-    <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
-    <a href=https://github.com/j-williamson4>
-    <i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-</footer>
-
 </html>
