added contact page, functionality WIP

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="assets/resume/John Williamson Resume.pdf" 
                     target="_blank">Resume</a>
             </li>
-            <li><a href="#" >Contact</a></li>
+            <li><a href="contact.html" >Contact</a></li>
         </ul>
     </nav>
     <hr>
@@ -23,7 +23,9 @@
        <div class="circle-portrait"><img src="assets/images/me.jpg" class="picMe"></div>
        <h1>John Williamson </h1>
        <h3 style="color:#6e5e57;"> Software Developer</h3>
-       <p>I am an aspiring web developer, based near Austin, TX! I just graduated from Texas State University with my BS in Computer Science. Currently looking for a Full-Time position as a Software Engineer, or as a Web Developer.</p>
+       <p>I am an aspiring web developer, based near Austin, TX! I just graduated from Texas State University 
+          with my BS in Computer Science. Currently looking for a Full-Time position as a Software Engineer, 
+          or as a Web Developer.</p>
     </div>
     <div class="icons">
        <a href=https://www.linkedin.com/in/john-williamson-08b48412b>
