--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
                     <label for="message">Message</label>
                     <textarea class="form-control" id="message" rows="6"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Send</button>
             </form>
         </div>
     </div>
