using formspree for email form

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -19,23 +21,26 @@
         <div class="jumbotron">
             <h1> Contact </h1>
             <p> What can I do for you? </p>
-            <form>
+            <form role="form" id="contactForm" action="https://formspree.io/john.h.williamson.iv@gmail.com"
+            method="POST">
                 <div class="form-group">
-                    <label for="emailAddress">Email</label>
+                    <label for="emailAddress" class="h4">Email</label>
                     <input type="email" class="form-control" id="emailAddr" placeholder="Your email address">
+                    
                 </div>
                 <div class="form-group">
-                    <label for="subject">Subject</label>
+                    <label for="subject" class="h4">Subject</label>
                     <input type="text" class="form-control" id="subject" placeholder="Subject">
                 </div>
                 <div class="form-group">
-                    <label for="message">Message</label>
+                    <label for="message" class="h4">Message</label>
                     <textarea class="form-control" id="message" rows="6"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Send</button>
+                <button type="submit" id="form-submit" class="btn btn-primary pull-right">Send</button>
             </form>
         </div>
     </div>
+    
 </body>
 
 </html>
