--- a/contact.html
+++ b/contact.html
@@ -24,19 +24,24 @@
             <form role="form" id="contactForm" action="https://formspree.io/john.h.williamson.iv@gmail.com"
             method="POST">
                 <div class="form-group">
+                    <label for="name" class="h4">Name</label>
+                    <input type="text" class="form-control" id="name" placeholder="Your Name"
+                     name="name">
+                </div>
+                <div class="form-group">
                     <label for="emailAddress" class="h4">Email</label>
-                    <input type="email" class="form-control" id="emailAddr" placeholder="Your email address">
-                    
+                    <input type="email" class="form-control" id="emailAddr" placeholder="Your email address"
+                     name="emailAddr">
                 </div>
                 <div class="form-group">
                     <label for="subject" class="h4">Subject</label>
                     <input type="text" class="form-control" id="subject" placeholder="Subject">
                 </div>
                 <div class="form-group">
-                    <label for="message" class="h4">Message</label>
-                    <textarea class="form-control" id="message" rows="6"></textarea>
+                    <label for="message" class="h4" >Message</label>
+                    <textarea class="form-control" id="message" rows="6" name="message"></textarea>
                 </div>
-                <button type="submit" id="form-submit" class="btn btn-primary pull-right">Send</button>
+                <button type="submit" id="form-submit" class="btn btn-primary pull-right" value="Send">Send</button>
             </form>
         </div>
     </div>
