--- a/index.html
+++ b/index.html
@@ -5,36 +5,37 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>John Williamson</title>
+	<style>
+	 html,body { 
+	  width:100%;
+	  height:100%;
+	  background: #f2f2f2;
+     }
+     #particles-js {
+	  width:100%;
+	  height:100%;
+     }
+     h1 {
+      font-size: 5rem;
+      position: absolute;
+      top: 40%;
+      left: 35%;
+      color: #FFF;
+      font-family: Helvetica;
+      font-weight: 400;
+      text-shadow: 4px 4px #5F6D72;
+     }
+   </style>
 </head>
 
-<body>
-    <nav>
-        <ul>
-            <li><a href="#" >About</a></li>
-            <li><a href="assets/resume/John Williamson Resume.pdf" 
-                    target="_blank">Resume</a>
-            </li>
-            <li><a href="contact.html" >Contact</a></li>
-        </ul>
-    </nav>
-    <hr>
-    <div class="info">
-       <div class="circle-portrait"><img src="assets/images/me.jpg" class="picMe"></div>
-       <h1>John Williamson </h1>
-       <h3 style="color:#6e5e57;"> Software Developer</h3>
-       <p>I am an aspiring web developer, based near Austin, TX! I just graduated from Texas State University 
-          with my BS in Computer Science. Currently looking for a Full-Time position as a Software Engineer, 
-          or as a Web Developer.</p>
-    </div>
-    <div class="icons">
-       <a href=https://www.linkedin.com/in/john-williamson-08b48412b>
-       <i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
-       <a href=https://github.com/j-williamson4>
-       <i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-    </div>
+<body>  
+  <div id="child">
+    <a href="home.html"><h1>John Williamson</h1></a>
+  </div> 
+  <div id="particles-js"></div>
+  <script src="assets/particlesJS/particles.js"></script>
+  <script src="assets/particlesJS/app.js"></script>  
 </body>
 </html>
