--- a/contact.html
+++ b/contact.html
@@ -5,18 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <style>
-        body {
-        background: #e7eef2;
-        font-family: 'Open Sans', sans-serif;
-    </style>
-    <title>Contact (JWIV)</title>
+    <title>Contact Me</title>
 </head>
 
 <body>
-
+<div id="particles-js"></div>
     <div class="container">
         <div class="jumbotron">
             <h1> Contact </h1>
@@ -45,7 +41,8 @@
             </form>
         </div>
     </div>
-    
+ <script src="assets/particlesJS/particles.js"></script>
+ <script src="assets/particlesJS/app.js"></script>  
 </body>
 
 </html>
