--- a/index.html
+++ b/index.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>John Williamson</title>
-	<style>
-	 html,body { 
-	  width:100%;
-	  height:100%;
-	  background: #f2f2f2;
+    <style>
+     html,body { 
+       width:100%;
+       height:100%;
+       background: #f2f2f2;
      }
      #particles-js {
-	  width:100%;
-	  height:100%;
+       width:100%;
+       height:100%;
      }
+
+    a {
+       margin-right: auto;
+       margin-left: auto;
+       display: block;
+     }		
+		
      h1 {
-      font-size: 5rem;
-      position: absolute;
-      top: 40%;
-      left: 35%;
-      color: #FFF;
-      font-family: Helvetica;
-      font-weight: 400;
-      text-shadow: 4px 4px #5F6D72;
+       font-size: 5rem;
+       position: absolute;
+       top: 40%;
+       left: 35%;
+       color: #FFF;
+       font-family: Helvetica;
+       font-weight: 400;
+       text-shadow: 4px 4px #5F6D72;
      }
-   </style>
+    </style>
 </head>
 
 <body>  
